# Dr.QP-docker-images

./: .travis.yml  CMakeLists.txt  Dockerfile.main  Dockerfile.main.c  README.md  azure-pipelines.yml
context/default_project/: TF_Week2.py  test.py
partials/: CMakeLists.txt  Dockerfile.code-plugins  Dockerfile.code-server  Dockerfile.cuda  Dockerfile.jupyterlab  Dockerfile.main  Dockerfile.miniconda  Dockerfile.python  Dockerfile.tensorflow-gpu  Dockerfile.ubuntu
